[package]
name = "to_to"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
wasm-bindgen = "0.2.84"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.92"
anyhow = "1.0.69"
yew-router = "0.17.0"